<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="amount_hint">Enter Amount</string>
    <string name="pax">Num of Pax</string>
    <string name="pax_hint">Enter Pax No.</string>
    <string name="discount">Discount (%)</string>
    <string name="discount_hint">Enter Discount (%)</string>
    <string name="svc">Service Charge (10%)</string>
    <string name="gst">GST (7%)</string>
    <string name="payment">Payment Mode</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="split">Split Bill</string>
    <string name="reset">Reset</string>
</resources>
